[package]
name = "zwaver"
version = "0.1.0"
authors = ["Emil Hesslow <hesslow@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
tokio-test = "0.2"
tokio-serial = "4.3"
bytes = "0.5"
num-traits = "0.2"
num-derive = "0.3"
num_enum = "0.5"
futures = "0.3"
futures-util = "0.3"
bitvec = "0.17"
x25519-dalek = "0.6"
rand = "0.7"
cmac = "0.3"
aes = "0.4"
aes-ccm = "0.5"
rand_ctr_drbg = { git = "https://github.com/WizKid/rand_ctr_drbg" }
generic-array = "0.14"